[package]
name = "awc-openssl-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "3.0.0-beta.12", features = ["openssl"] }
openssl = {version="0.10.38", features = ["vendored"]}

[patch.crates-io]
openssl = { path  ="./openssl" }
